fixed menu tab spacing 1px

--- a/src/view/Menu.scss
+++ b/src/view/Menu.scss
@@ -22,7 +22,7 @@ $menu-transition-time: .25s;
     .menu-tabs {
         position: relative;
         width: 100%;
-        height: 48px;
+        height: 47px;
         box-sizing: border-box;
 
         > .menu-option--group {
